<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:ignore="ExtraText">



    <ImageView
        android:id="@+id/imagenEmpleado"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_account_circle"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/NombreCompleto"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_nombre_completo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/NombreCompleto"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/fechas"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_fechas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/fechas"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/Puesto"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_puesto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/Puesto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/TelefonoExtension"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/TelefonoExtension" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/DireccionCodPos"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/DireccionCodPos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/PaCiuRe"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_PaCiuRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/PaCiuRe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/reportar"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_reportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/reportar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/Notas"
        android:textColor="?colorPrimary"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_notas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/large_text" />

</LinearLayout>
</ScrollView>