<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:ignore="ExtraText">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/NombreCompañia"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_nombre_compañia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/NombreCompañia"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/NombreContacto"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_nombre_contacto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/NombreContacto"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Puesto"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_puesto_contacto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/Puesto"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/TelefonoFax"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_telefono_fax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/TelefonoFax"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/DireccionCodPos"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_direccion_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/DireccionCodPos"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/PaCiuRe"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_PaCiuRe_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/PaCiuRe"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/homepage"
            android:textColor="?colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_página_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/homepage"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>
